--- a/WhatsTheMoveApp/Views/LoginPage.xaml
+++ b/WhatsTheMoveApp/Views/LoginPage.xaml
@@ -1,12 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WhatsTheMoveApp.Views.LoginPage">
+             xmlns:viewmodels="clr-namespace:WhatsTheMoveApp.ViewModels"
+             xmlns:models="clr-namespace:WhatsTheMoveApp.Models"
+             x:Class="WhatsTheMoveApp.Views.LoginPage"
+             x:DataType="viewmodels:LoginPageViewModel"
+             Shell.NavBarIsVisible="False"
+             Shell.PresentationMode="Modal"
+             BackgroundColor="#4A4A4A">
+
+    <ContentPage.BindingContext>
+        <viewmodels:LoginPageViewModel/>
+    </ContentPage.BindingContext>
+    
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Login Page Placeholder"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Padding="40"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center">
+            <Image Source="Rescources/drawable/WTMLogo.png" 
+                   WidthRequest="180"
+                   HeightRequest="180"/>
+            <Entry x:Name="textUsername"
+                   Placeholder="Username"
+                   TextColor="White"
+                   PlaceholderColor="Gray"/>
+            <Entry x:Name="textPassword"
+                   Placeholder="Password"
+                   IsPassword="True"
+                   TextColor="White"
+                   PlaceholderColor="Gray"/>
+            <Button VerticalOptions="Center"
+                    Text="Login"
+                    TextColor="White"
+                    BackgroundColor="Transparent"
+                    BorderWidth="1.5"
+                    BorderColor="Gray"
+                    CornerRadius="50"
+                    Command="{Binding LoginCommand}" />
+            <Button VerticalOptions="Center"
+                    Text="Sign Up"
+                    TextColor="White"
+                    BackgroundColor="Transparent"
+                    BorderWidth="1.5"
+                    BorderColor="Gray"
+                    CornerRadius="50"
+                    Command="{Binding SignUpCommand}" />
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
