--- a/WhatsTheMoveApp/App.xaml
+++ b/WhatsTheMoveApp/App.xaml
@@ -27,7 +27,7 @@
             <Style x:Key="SubHeaderText" TargetType="Label">
                 <Setter Property="FontSize" Value="Medium"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
-                <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
             </Style>
@@ -35,7 +35,7 @@
             <Style x:Key="DescriptionText" TargetType="Label">
                 <Setter Property="FontSize" Value="Large"/>
                 <Setter Property="FontAttributes" Value="None"/>
-                <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
             </Style>
@@ -114,7 +114,7 @@
                 <Setter Property="TranslationY" Value="{OnPlatform iOS='-150', Android='0'}"/>
                 <Setter Property="HeightRequest" Value="{OnPlatform iOS='120', Android='250'}"/>
                 <Setter Property="HasShadow" Value="False"/>
-                <Setter Property="BackgroundColor" Value="White"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource SecondaryColor}"/>
             </Style>
             
             <!--User Name Text-->
@@ -127,13 +127,13 @@
             <!--User Location Text-->
             <Style x:Key="UserLocationText" TargetType="Label">
                 <Setter Property="FontSize" Value="16"/>
-                <Setter Property="TextColor" Value="{StaticResource SubTextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"/>
             </Style>
             
             <!--Board Title Text-->
             <Style x:Key="BoardTitleText" TargetType="Label">
                 <Setter Property="Padding" Value="0,30,0,5"/>
-                <Setter Property="TextColor" Value="{StaticResource SubTextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource PrimaryColor}"/>
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="HorizontalOptions" Value="Center"/>
             </Style>
@@ -150,11 +150,24 @@
                 <Setter Property="Text" Value="Logout"/>
                 <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
                 <Setter Property="BackgroundColor" Value="{StaticResource TertiaryColor}"/>
-                <Setter Property="Margin" Value="0,20,0,2"/>
+                <Setter Property="Margin" Value="0,20,0,0"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="FontSize" Value="17"/>
                 <Setter Property="HeightRequest" Value="45"/>
                 <Setter Property="Command" Value="{Binding LogoutCommand}"/>
+            </Style>
+            
+            <!--Settings Button-->
+            <Style x:Key="SettingsButton" TargetType="Button">
+                <Setter Property="Text" Value="S"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource SecondaryColor}"/>
+                <Setter Property="Margin" Value="0,0,0,0"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="HeightRequest" Value="50"/>
+                <Setter Property="BorderColor" Value="{StaticResource PrimaryColor}"/>
+                <Setter Property="BorderWidth" Value="2"/>
+                <Setter Property="Command" Value="{Binding SettingsCommand}"/>
             </Style>
 
         </ResourceDictionary>        
