--- a/WhatsTheMoveApp/Views/UserProfilePage.xaml
+++ b/WhatsTheMoveApp/Views/UserProfilePage.xaml
@@ -13,23 +13,26 @@
 
     <ContentPage.Content>
         <!--Content Page Grid-->
-        <Grid BackgroundColor="Transparent">
+        <Grid BackgroundColor="Transparent" Margin="0,0,0,0">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
             <!--Profile Image-->
             <Image Grid.Row="0" Source="{Binding ProfileImage}" VerticalOptions="Start"/>
             
             <!--Profile Information-->
-            <StackLayout Grid.Row="0" 
+            <StackLayout Grid.Row="1" 
                          BackgroundColor="{StaticResource PrimaryColor}" 
                          VerticalOptions="End">
                 <Frame Style="{StaticResource UserProfileMainFrame}" 
                        CornerRadius="40">
                     <!--Information Grid-->
-                    <Grid Padding="25, 10, 25, 0" 
+                    <Grid Padding="25, 5, 25, 0" 
                           RowSpacing="0">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
@@ -42,14 +45,26 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <!--User Name, Location, Email-->
+                        <!--User Name, Location, Email, Settings Button-->
                         <Label Grid.Row="0" 
                                Grid.Column="0" 
                                Grid.ColumnSpan="3"
                                Text="John Doe"
                                Style="{StaticResource UserNameText}"/>
+                        <Button Grid.Row="0" 
+                                Grid.Column="3" 
+                                HeightRequest="30" 
+                                WidthRequest="30" 
+                                BackgroundColor="{StaticResource SecondaryColor}" 
+                                CornerRadius="50" 
+                                Margin="30,0,0,0"
+                                Style="{StaticResource SettingsButton}">
+                            
+                        </Button>
                         <Label Grid.Row="1" 
                                Grid.Column="0" 
+                               Grid.ColumnSpan="2"
+                               Margin="0,2,0,0"
                                Text="Memphis, TN"
                                Style="{StaticResource UserLocationText}"/>
                         <Label Grid.Row="2" 
@@ -66,17 +81,15 @@
                         </Label>
 
                         <!--Ratings, Followers, Following-->
-                        <Label Grid.Row="3" Grid.Column="0" Text="Moves" Style="{StaticResource BoardTitleText}"/>
-                        <Label Grid.Row="4" Grid.Column="0" Text="28" Style="{StaticResource BoardContentText}"/>
+                        <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Followers" Style="{StaticResource BoardTitleText}"/>
+                        <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="435" Style="{StaticResource BoardContentText}"/>
 
-                        <Label Grid.Row="3" Grid.Column="1" Text="Followers" Style="{StaticResource BoardTitleText}"/>
-                        <Label Grid.Row="4" Grid.Column="1" Text="435" Style="{StaticResource BoardContentText}"/>
+                        <Label Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" Text="Following" Style="{StaticResource BoardTitleText}"/>
+                        <Label Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="465" Style="{StaticResource BoardContentText}"/>
 
-                        <Label Grid.Row="3" Grid.Column="2" Text="Following" Style="{StaticResource BoardTitleText}"/>
-                        <Label Grid.Row="4" Grid.Column="2" Text="465" Style="{StaticResource BoardContentText}"/>
-
-                        <!--Logout Button-->
-                        <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Style="{StaticResource LogoutButton}"/>
+                        <!-- Logout Button -->
+                        <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Style="{StaticResource LogoutButton}"/>
+                        
                     </Grid>
                 </Frame>
             </StackLayout>
